# CI-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: integrationTest.hpp  parser.h
source/: integrationTest.cpp  main.cpp  parser.cpp
tests/: example.cpp  integrationTest.cpp  integrationTest_.cpp  it-checkout.cpp  it-cloning.cpp  it-cmake.cpp  it-make.cpp  it-merge.cpp  it-unittest.cpp  main.cpp  parser.cpp
tests/it/: it-checkout  it-cloning  it-cmake  it-make  it-merge  it-unittest
